# eth-core-wallet

./: .gitignore  CMakeLists.txt  LICENSE  save.json  session.json
.github/workflows/: ci.yml
include/: async_manager.hpp  async_transactions_history_manager.hpp  bip39.hpp  blockchain_client.hpp  cli.hpp  config.hpp  configuration.hpp  crypto_utils.hpp  custom_text.hpp  derive.hpp  http.hpp  input_component.hpp  iwallet_actions.hpp  json.hpp  mnemonic.hpp  paragraph.hpp  security.hpp  supported_networks.hpp  tech_utils.hpp  text_bytes.hpp  text_component.hpp  ui.hpp  uint256.hpp  utils.hpp  wallet.hpp  wallet_info.hpp
include/api/: http.hpp  json.hpp  rlp.hpp
include/async-managers/: async_eth_usd_update.hpp  async_manager.hpp  async_transactions_history_manager.hpp
include/config/: config.hpp  configuration.hpp
include/core/: asset.hpp  bip39.hpp  derive.hpp  mnemonic.hpp  secure_bytes_data.hpp  security.hpp  supported_networks.hpp  uint256.hpp  wallet.hpp  wallet_info.hpp
include/drivers/: balance_client.hpp  blockchain_client.hpp  gas_client.hpp  history_client.hpp  manager.hpp  price_client.hpp  transaction_client.hpp  tx_status_client.hpp
include/ui/: cli.hpp  password_sign_ui.hpp  ui.hpp
include/ui/ftxui-components/: input_component.hpp  paragraph.hpp  text_bytes.hpp  text_component.hpp
include/utils/: crypto_utils.hpp  tech_utils.hpp
src/: CMakeLists.txt  async_eth_usd_update.cpp  async_manager.cpp  async_transactions_history_manager.cpp  blockchain_client.cpp  cli.cpp  config.cpp  config_cli.cpp  crypto_utils.cpp  derive.cpp  http.cpp  json.cpp  main.cpp  mnemonic.cpp  security.cpp  tech_utils.cpp  ui.cpp  uint256.cpp  utils.cpp  wallet.cpp
src/api/: http.cpp  json.cpp  rlp.cpp
src/async-managers/: async_balance.cpp  async_eth_usd_update.cpp  async_transactions_history_manager.cpp
src/config/: config.cpp
src/core/: derive.cpp  mnemonic.cpp  security.cpp  uint256.cpp  wallet.cpp
src/drivers/: balance_client.cpp  blockchain_client.cpp  gas_client.cpp  history_client.cpp  manager.cpp  price_client.cpp  transaction_client.cpp  tx_status_client.cpp
src/ui/: cli.cpp  config_cli.cpp  main_wallet_ui.cpp  password_sign_ui.cpp  passwords_ui.cpp  supported_functions_cli.cpp  ui.cpp  wallet_setup_ui.cpp
src/utils/: crypto_utils.cpp  tech_utils.cpp
tests/: CMakeLists.txt
tests/api/: test_rlp.cpp
tests/core/: bip39-tests.json  security_tests.cpp  test_derivation.cpp  test_mnemonic.cpp
tests/core/utils/: utils.hpp
